--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Szablon strony CSS
 </head>
 
 <body>
-TEKST STRONA NA OCENĘ
+TEKST STRONA NA OCENĘ GABRIELA KOTWIŃSKA
 
 <div id="simplecookienotification_v01" style="display: block; z-index: 99999; min-height: 35px; width: 100%; position: fixed; background: rgb(31, 31, 31) none repeat scroll 0% 0%; border-image: none 100% / 1 / 0 stretch; border-style: solid none none; border-width: 5px 0px 0px; border-color: rgb(198, 198, 198); text-align: center; right: 0px; color: rgb(119, 119, 119); bottom: 0px; left: 0px; border-radius: 5px;">
 <div style="padding:10px; margin-left:15px; margin-right:15px; font-size:14px; font-weight:normal;">
