--- a/1.html
+++ b/1.html
@@ -22,13 +22,18 @@
 <a href="2.html"><li>Ulubione książki</li></a>
 <a href="autor.html"><li>O mnie</li></a>
 <br><br><br>
-<div id="div1"><h1>OSTATNIO PRZECZYTANE</h1>
-<h2>KSIĄŻKI<h2><br>
+<div id="div4"><h1>OSTATNIO PRZECZYTANE</h1>
+<br><br><br><br>
+<center><h2>KSIĄŻKI</h2><br>
 1."Złamane więzi" Cora Reily<br>
 2."Złamana duma" Cora Reily<br>
 3."Kimi Raikkonem, jakiego nie znamy" Kari Hotakainen<br>
-Ebooki<br>
-
+4."Bóg nigdy nie mruga" Brett Regina<br>
+5."Save Me" Mona Kasten<br>
+6."Złączeni przeszłością" Cora Reily
+<h2>EBOOKI</h2><br>
+Trylogia "Hell"
+</center>
 </div>
 </ul>
 </center>
