--- a/2.html
+++ b/2.html
@@ -24,8 +24,16 @@
 
 <a href="autor.html"><li>O mnie</li></a>
 <br><br>
-<div id="div1"><h1>ULUBIEŃCY</h1>
-abc
+
+<div id="div2"><h1>ULUBIEŃCY</h1>
+<br>
+<br><br><br><br>
+<span><center>1."Złamana duma" Cora Reily
+<br>2."Złączeni miłością" Cora Reily
+<br>3."Złamane więzi" Cora Reily
+<br>4."Kimi Raikkonem, jakiego nie znamy" Kari Hotakainen
+<br>5."Zdławienie" Lauren Asher </span>
+
 </div>
 </ul>
 </center>
