--- a/autor.html
+++ b/autor.html
@@ -21,8 +21,14 @@
 <a href="1.html"><li>Ostatnio przeczytane</li></a>
 <a href="2.html"><li>Ulubione książki</li></a>
 <a href="autor.html"><li>O mnie</li></a>
-<div id="div1"><h1>O MNIE</h1>
-abc
+<div id="div3"><h1>O MNIE</h1><br><br>
+-Nazywam się Gabriela Kotwińska.<br>
+-Mam 18 lat.<br>
+-Uczę się na profilu technik informatyk.<br>
+-Uwielbiam czytac książki i oglądać Formułę 1.<br><br><br>
+<right-side><img src="ja.jpg" width="200" height="250"></right-side>
+<right><img src="polka.jpg" width="200" height="250"></right>
+<right><img src="ja2.jpg" width="200" height="250"></right>
 </div>
 </ul>
 </center>
