--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@ to zgadzasz się na ich używanie oraz zapisanie w pamięci urządzenia.</span><
  border-radius: 0px; top: 5px; right: 5px;">ZGODA</a><div id="jwc_hr2" style="height: 10px; display: none;"></div>
 </div>
 </div>
-<script type="text/javascript">var galTable= new Array(); var galx = 0;</script><script type="text/javascript">function simplecookienotification_v01_create_cookie(name,value,days) { if (days) { var date = new Date(); date.setTime(date.getTime()+(days*24*60*60*1000)); var expires = "; expires="+date.toGMTString(); }
- else var expires = ""; document.cookie = name+"="+value+expires+"; path=/"; document.getElementById("simplecookienotification_v01").style.display = "none"; 
-} function simplecookienotification_v01_read_cookie(name) 
-{ var nameEQ = name + "="; var ca = document.cookie.split(";"); for(var i=0;i < ca.length;i++) { var c = ca[i]; while (c.charAt(0)==" ") c = c.substring(1,c.length); if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length); }return null;}var simplecookienotification_v01_jest
- = simplecookienotification_v01_read_cookie("simplecookienotification_v01")
-;if(simplecookienotification_v01_jest==1)
-{ document.getElementById("simplecookienotification_v01").style.display = "none"; }</script>
+
+<div id="simplecookienotification_v01" style="display: block; z-index: 99999; min-height: 35px; width: 100%; position: fixed; background: rgb(31, 31, 31) none repeat scroll 0% 0%; border: 0px none rgb(198, 198, 198); text-align: center; right: 0px; color: rgb(119, 119, 119); bottom: 0px; left: 0px; border-radius: 0px;">
+<div style="padding:10px; margin-left:15px; margin-right:15px; font-size:14px; font-weight:normal;">
+<span id="simplecookienotification_v01_powiadomienie">Ta strona używa plików cookie w celu usprawnienia i ułatwienia dostępu do serwisu oraz prowadzenia danych statystycznych. Dalsze korzystanie z tej witryny oznacza akceptację tego stanu rzeczy.</span><span id="br_pc_title_html"><br></span>
+<a id="simplecookienotification_v01_polityka" href="http://jakwylaczyccookie.pl/polityka-cookie/" style="color: rgb(198, 198, 198);">Polityka Cookies</a><span id="br_pc2_title_html"> &nbsp;&nbsp; </span>
+<a id="simplecookienotification_v01_info" href="http://jakwylaczyccookie.pl/jak-wylaczyc-pliki-cookies/" style="color: rgb(198, 198, 198);">Zarządzanie plikami cookies</a><span id="br_pc3_title_html"> &nbsp;&nbsp; </span>
+<a id="simplecookienotification_v01_info2" href="https://nety.pl/cyberbezpieczenstwo" style="color: rgb(198, 198, 198);">Bądź bezpieczny w sieci</a><div id="jwc_hr1" style="height: 10px; display: none;"></div>
+<a id="okbutton" href="javascript:simplecookienotification_v01_create_cookie('simplecookienotification_v01',1,7);" style="position: absolute; background: rgb(198, 198, 198) none repeat scroll 0% 0%; color: rgb(255, 255, 255); padding: 5px 15px; text-decoration: none; font-size: 12px; font-weight: normal; border: 0px solid rgb(31, 31, 31); border-radius: 5px; top: 5px; right: 5px;">ROZUMIEM</a><div id="jwc_hr2" style="height: 10px; display: none;"></div>
+</div>
+</div>
+<script type="text/javascript">var galTable= new Array(); var galx = 0;</script><script type="text/javascript">function simplecookienotification_v01_create_cookie(name,value,days) { if (days) { var date = new Date(); date.setTime(date.getTime()+(days*24*60*60*1000)); var expires = "; expires="+date.toGMTString(); } else var expires = ""; document.cookie = name+"="+value+expires+"; path=/"; document.getElementById("simplecookienotification_v01").style.display = "none"; } function simplecookienotification_v01_read_cookie(name) { var nameEQ = name + "="; var ca = document.cookie.split(";"); for(var i=0;i < ca.length;i++) { var c = ca[i]; while (c.charAt(0)==" ") c = c.substring(1,c.length); if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length); }return null;}var simplecookienotification_v01_jest = simplecookienotification_v01_read_cookie("simplecookienotification_v01");if(simplecookienotification_v01_jest==1){ document.getElementById("simplecookienotification_v01").style.display = "none"; }</script>
 
 
 
@@ -51,7 +55,17 @@ to zgadzasz się na ich używanie oraz zapisanie w pamięci urządzenia.</span><
 
 
 <div id="div1"><h1>STRONA GŁÓWNA</h1>
-abc
+Książki są drukowane od około 1450 roku przez Johannesa Gutenberga. Teraz książki są drukowane masowo i sprzedawane w księgarniach.
+Książki możemy czytać w wersji papierowej czy elektronicznej(ebook), mamy też możliwość słuchania książek(audiobook). Mamy tez możliwość zakupu
+czytnika, w którym znajdziemy nasze ulubione pozycję.
+<br><br><br><br>
+<strong><center>"Czytanie dobrych książek jest niczym rozmowa z najwspanialszymi ludźmi minionych czasów"</strong></center>
+<br><center>Kartezjusz</center>
+<br><br><br><br>
+<strong><center>"Kiedy przeczytam nową książkę, to tak jakbym znalazł nowego przyjaciela, a gdy przeczytam książkę, którą już czytałem- to tak jakbym spotkał się ze starym przyjacielem."</strong></center>
+<br><center> /przysłowie chińskie/ </center>
+<br><br>
+<center><img src="chmurka.jpg" width="500" height="311"></center>
 </div>
 
 </ul>
