--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ czytnika, w którym znajdziemy nasze ulubione pozycję.
 <strong><center>"Czytanie dobrych książek jest niczym rozmowa z najwspanialszymi ludźmi minionych czasów"</strong></center>
 <br><center>Kartezjusz</center>
 <br><br><br><br>
-<strong><center>"Kiedy przeczytam nową książkę, to tak jakbym znalazł nowego przyjaciela, a gdy przeczytam książkę, którą już czytałem- to tak jakbym spotkał się ze starym przyjacielem."</strong></center>
+<strong><center>"Kiedy przeczytam nową książkę, to tak jakbym znalazł nowego przyjaciela, a gdy przeczytam książkę, którą już czytałem- to tak jakbym spotkał się ze starym przyjacielem."</center>
 <br><center> /przysłowie chińskie/ </center>
 <br><br>
 <center><img src="chmurka.jpg" width="500" height="311"></center>
