--- a/2.html
+++ b/2.html
@@ -28,11 +28,11 @@
 <div id="div2"><h1>ULUBIEŃCY</h1>
 <br>
 <br><br><br><br>
-<span><center>1."Złamana duma" Cora Reily
+<center>1."Złamana duma" Cora Reily
 <br>2."Złączeni miłością" Cora Reily
 <br>3."Złamane więzi" Cora Reily
 <br>4."Kimi Raikkonem, jakiego nie znamy" Kari Hotakainen
-<br>5."Zdławienie" Lauren Asher </span>
+<br>5."Zdławienie" Lauren Asher 
 
 </div>
 </ul>
