--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ to zgadzasz się na ich używanie oraz zapisanie w pamięci urządzenia.</span><
 <a href="1.html"><li>Ostatnio przeczytane</li></a>
 <a href="2.html"><li>Ulubione książki</li></a>
 <a href="autor.html"><li> O mnie </li></a>
-
+</ul>
 <br><br><br><br><br><br><br>
-
+</center>
 
 
 <div id="div1"><h1>STRONA GŁÓWNA</h1>
@@ -59,16 +59,17 @@ Książki są drukowane od około 1450 roku przez Johannesa Gutenberga. Teraz ks
 Książki możemy czytać w wersji papierowej czy elektronicznej(ebook), mamy też możliwość słuchania książek(audiobook). Mamy tez możliwość zakupu
 czytnika, w którym znajdziemy nasze ulubione pozycję.
 <br><br><br><br>
-<strong><center>"Czytanie dobrych książek jest niczym rozmowa z najwspanialszymi ludźmi minionych czasów"</strong></center>
+<strong><center>"Czytanie dobrych książek jest niczym rozmowa z najwspanialszymi ludźmi minionych czasów"</center><strong>
 <br><center>Kartezjusz</center>
 <br><br><br><br>
-<strong><center>"Kiedy przeczytam nową książkę, to tak jakbym znalazł nowego przyjaciela, a gdy przeczytam książkę, którą już czytałem- to tak jakbym spotkał się ze starym przyjacielem."</center>
+<strong><center>"Kiedy przeczytam nową książkę, to tak jakbym znalazł nowego przyjaciela, a gdy przeczytam książkę, którą już czytałem- to tak jakbym spotkał się ze starym przyjacielem."</center></strong>
 <br><center> /przysłowie chińskie/ </center>
 <br><br>
 <center><img src="chmurka.jpg" width="500" height="311"></center>
+
+
 </div>
 
-</ul>
-</center>
+
 </body>
 </html>
