--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Książki są drukowane od około 1450 roku przez Johannesa Gutenberga. Teraz ks
 Książki możemy czytać w wersji papierowej czy elektronicznej(ebook), mamy też możliwość słuchania książek(audiobook). Mamy tez możliwość zakupu
 czytnika, w którym znajdziemy nasze ulubione pozycję.
 <br><br><br><br>
-<strong><center>"Czytanie dobrych książek jest niczym rozmowa z najwspanialszymi ludźmi minionych czasów"</center><strong>
+<strong><center>"Czytanie dobrych książek jest niczym rozmowa z najwspanialszymi ludźmi minionych czasów"</center></strong>
 <br><center>Kartezjusz</center>
 <br><br><br><br>
 <strong><center>"Kiedy przeczytam nową książkę, to tak jakbym znalazł nowego przyjaciela, a gdy przeczytam książkę, którą już czytałem- to tak jakbym spotkał się ze starym przyjacielem."</center></strong>
