--- a/2.html
+++ b/2.html
@@ -33,7 +33,7 @@
 <br>3."Złamane więzi" Cora Reily
 <br>4."Kimi Raikkonem, jakiego nie znamy" Kari Hotakainen
 <br>5."Zdławienie" Lauren Asher 
-
+  </center>
 </div>
 </ul>
 </center>
