--- a/2.html
+++ b/2.html
@@ -23,6 +23,7 @@
 <a href="2.html"><li>Ulubione książki</li></a>
 
 <a href="autor.html"><li>O mnie</li></a>
+  <a href="animacja.html"><li>Animacja CSS</li></a>
 <br><br>
 
 <div id="div2"><h1>ULUBIEŃCY</h1>
