--- a/autor.html
+++ b/autor.html
@@ -21,6 +21,7 @@
 <a href="1.html"><li>Ostatnio przeczytane</li></a>
 <a href="2.html"><li>Ulubione książki</li></a>
 <a href="autor.html"><li>O mnie</li></a>
+  <a href="animacja.html"><li>Animacja CSS</li></a>
 <div id="div3"><h1>O MNIE</h1><br><br>
 -Nazywam się Gabriela Kotwińska.<br>
 -Mam 18 lat.<br>
