--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ to zgadzasz się na ich używanie oraz zapisanie w pamięci urządzenia.</span><
 <a href="2.html"><li>Ulubione książki</li></a>
 <a href="autor.html"><li> O mnie </li></a>
  <a href="animacja.html"><li>Animacja CSS</li></a>
+ <a href="inde.html"><li><Przyciski</li></a>
 </ul>
 <br><br><br><br><br><br><br>
 </center>
