--- a/inde.html
+++ b/inde.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="styl.css" type="text/css">
 </head>
 <body>
+<center>
+<img src="text.gif" width="30%" height="30%" style="box-shadow:black 0.5em 0.5em; border:8px solid white;">
+</center>
     <center>
     <a href="inde.html"><img src="st.png" onmouseover="this.src = 'sg2.png'" onmouseout="this.src = 'st.png'" width="20%" height="auto"/></a>
     <a href="omnie.html"><img src="omnie1.png" onmouseover="this.src = 'omnie2.png'" onmouseout="this.src = 'omnie1.png'" width="20%" height="auto"/></a>
