--- a/ostatnioprzeczytane.html
+++ b/ostatnioprzeczytane.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="styl.css" type="text/css">
 </head>
 <body>
+<center>
+<img src="text.gif" width="30%" height="30%" style="box-shadow:black 0.5em 0.5em; border:8px solid white;">
+</center>
     <center>
     
             <br>
